@@ -163,6 +163,12 @@
     <resource type="image" id="earth">sprites/planets/earth.png</resource>
     <resource type="image" id="klisk_homeworld">sprites/planets/klisk_planet.png</resource>
 
+    <!-- stars -->
+    <resource type="image" id="star_4">sprites/space_objects/sun_64.png</resource>
+    <resource type="image" id="star_3">sprites/space_objects/sun_96.png</resource>
+    <resource type="image" id="star_2">sprites/space_objects/sun_128.png</resource>
+    <resource type="image" id="star_1">sprites/space_objects/sun_192.png</resource>
+
     <!-- effects -->
     <resource type="image" id="blaster_shot">sprites/effects/blaster_shot.png</resource>
     <resource type="image" id="plasma_shot">sprites/effects/plasma_shot.png</resource>
